本の登録、編集などを追加

--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -9,3 +9,7 @@ ja:
         memo: メモ
         picture: 写真
         title: 題名
+
+        new_book: 本を登録する
+        editing_book: 本を編集する
+      books: 図書一覧
