辞書の修正

--- a/config/locales/common.ja.yml
+++ b/config/locales/common.ja.yml
@@ -7,9 +7,9 @@ ja:
     destroy: 削除
 
   message:
-    notice_create: 作成に成功しました。
-    notice_update: 編集に成功しました。
-    notice_destroy: 削除に成功しました。
+    notice_create: "%{item}の作成に成功しました。"
+    notice_update: "%{item}の編集に成功しました。"
+    notice_destroy: "%{item}の削除に成功しました。"
     delete_confirm: 本当に削除しますか？
 
   views:
