--- a/config/locales/common.en.yml
+++ b/config/locales/common.en.yml
@@ -1,8 +1,8 @@
 en:
   message:
-    notice_create: Book was successfully created.
-    notice_update: Book was successfully updated.
-    notice_destroy: Book was successfully destroyed.
+    notice_create: "%{item} was successfully created."
+    notice_update: "%{item} was successfully updated."
+    notice_destroy: "%{item} was successfully destroyed."
     delete_confirm: Are you sure?
 
   views:
