--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -11,6 +11,6 @@ ja:
         picture: 画像  #g
         title: 題名  #g
       user:
-        postalcode: 郵便番号
+        postal_code: 郵便番号
         address: 住所
         self_introduction: 自己紹介
